--- a/estilos.css
+++ b/estilos.css
@@ -795,6 +795,21 @@ height: 100vh;
 .titolocontatti {
 		font-size: 6vw;
 	}
+/*menu*/
+
+.nav-item > .nav-link {
+	font-size: 1em;
+}
+
+.toggle-collapse {
+    margin-top: -45vh;
+}
+
+.toggle-icon {
+	width: 40px;
+	height: 4px;
+	filter: drop-shadow(3px 3px 0 #feeb01);
+}
 
 }
 
@@ -994,12 +1009,14 @@ height: 100vh;
 	font-size: 8vw;
 }
 
+/*menu*/
+
 .nav-item > .nav-link {
 	font-size: 1em;
 }
 
 .toggle-collapse {
-    margin-top: -21em;
+    margin-top: -45vh;
     transform: scale(0.8);
 }
 
