--- a/estilocv.css
+++ b/estilocv.css
@@ -15,23 +15,23 @@ body{
 	margin: 0;
 	width: 30%;
 	height:100vh;
-	background-color: #01052b;
+	background-color: black;
 	position: fixed;
 	overflow: hidden;
 }
 
 .titolo {
-	font-family: operetta-12, serif;
-	font-weight: 700;
+	font-family: montserrat, sans-serif;
+	font-weight: 900;
 	font-style: normal;
 	color: white;
-	font-size: 4.5em;
+	font-size: 4em;
 	margin-left: 10%;
 	margin-bottom: 0;
 }
 
 .professione {
-	font-family: ff-meta-serif-web-pro, serif;
+	font-family: montserrat, sans-serif;
 	font-weight: 300;
 	font-style: italic;
 	color: white;
@@ -46,7 +46,7 @@ body{
 	font-family: montserrat, sans-serif;
 	font-weight: 400;
 	font-style: normal;
-	color:#8b89f7;
+	color:#feeb01;
 	font-size: 1em;
 	text-align: left;
 	text-decoration: underline;
@@ -67,11 +67,11 @@ body{
 
 
 .link {
-	font-family: operetta-12, serif;
+	font-family: montserrat, sans-serif;
 	font-weight: 500 ;
 	font-style: normal;
 	color: white;
-	font-size: 1.2em;
+	font-size: 1em;
 	
 }
 
@@ -80,7 +80,7 @@ body{
 a {	text-decoration: none;}
 
 .Titolini {
-	font-family: operetta-12, serif;
+	font-family: montserrat, sans-serif;
 	font-weight: 700;
 	font-style: normal;
 	color: #463fdb;
@@ -116,11 +116,11 @@ a {	text-decoration: none;}
 
 
 .data {
-	font-family: ff-meta-serif-web-pro, serif;
-	font-weight: 500;
+	font-family: montserrat, sans-serif;
+	font-weight: 300;
 	font-style: italic;
 	color: black;
-	font-size: 1.1em;
+	font-size: 1em;
 	
 }
 
@@ -162,29 +162,29 @@ hr {
  
 }
 
-.about{ background-color: #463fdb;
-display: flex;
-margin-top: -1%;
-padding-top: 10%;
+.about{ background-color:#463fdb;
+	display: flex;
+	margin-top: -1%;
+	padding-top: 10%;
 		height: 100%;
 		padding-bottom: 10%;}
 
 .testoabout{
 	margin: auto;
-	font-family: operetta-12, serif;
+	font-family: montserrat, sans-serif;
 	font-weight: 700;
 	font-style: normal;
 	color: white;
 	font-size: 1.5em;
 	width: 65%;
-	line-height: 150%;}
+	line-height: 180%;}
 
 .testo {
 	font-family: montserrat, sans-serif;
-	font-weight: 400;
+	font-weight: 300;
 	font-style: normal;
 	color: black;
-	font-size: 1.2em;
+	font-size: 1em;
 	margin: auto;
 	line-height: 150%;
 	padding-bottom: 10%;
@@ -291,7 +291,7 @@ flex-wrap: wrap;}
 .footer {
 	width: 100%;
 	height: 6vh;
-	background-color:#463fdb;
+	background-color:black;
 	margin-top: 5%;
 	}
 
