--- a/estilocv.css
+++ b/estilocv.css
@@ -315,7 +315,9 @@ flex-wrap: wrap;}
 
 
 /*Dispositivos Medianos*/
-@media screen and (max-width:899px) and (min-width:600px){.info {
+@media screen and (max-width:899px) and (min-width:600px){
+	
+.info {
 	margin: 0;
 	width: 100%;
 	height: 30%;
@@ -349,14 +351,15 @@ flex-wrap: wrap;}
 	clear: both;
 	margin-left: 0%;
 	padding-top: 0.1%;
-    padding-bottom: 0.1%;
-	background-color:#8b89f7;
+    	padding-bottom: 0.1%;
+	background-color:#feeb01;
 }
 
 
 .link {
 	font-size: 1.2em;
 	margin-left: 5%;
+	color: black;
 	
 }
 
@@ -498,7 +501,7 @@ hr {
 		margin-left: 0%;
 		padding-top: 0.1%;
 		padding-bottom: 0.1%;
-		background-color:#8b89f7;
+		background-color:#feeb01;
 	}
 	
 	.casellamenu {
@@ -508,6 +511,7 @@ hr {
 	.link {
 		font-size: 1em;
 		margin-left: 5%;
+		color: black;
 		
 	}
 	
