Change image respuesta

--- a/estilos.css
+++ b/estilos.css
@@ -677,7 +677,7 @@ a:hover {
 
 
 .respuesta {
-	background-image: url(img/multiplo.jpg);
+	background-image: url(img/respuesta.jpg);
 	background-size: cover;
 	background-position: center;
 	height: 100vh;
